2005-03-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/pdf.c (WritePDFImage): Eliminate cause of annoying
	warning when PDFs are read by Ghostscript 8.5.
	* magick/module.c: Working DIR * should not be const.
	* magick/nt_base.c (closedir): Fix function definition so it
	matches POSIX standard.
	(opendir): Fix function definition so it matches POSIX standard.

2005-03-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (SetImageType):  Bilevel image is not required to
	be PseudoClass type.
	* coders/mpc.c (WriteMPCImage): Persist is_monochrome and
	is_grayscale flags.
	(ReadMPCImage): Restore is_monochrome and is_grayscale flags.

2005-03-09  Arne Rusek  <zonk@matfyz.cz>

	* magick/attribute.c (GenerateEXIFAttribute): Offset type
	correction to fix loop termination if size_t type is not 'long'.

2005-03-09  Alexander Yaworsky  <yaworsky@users.sourceforge.net>

	* coders/jbig.c (WriteJBIGImage): JBIG was writing an empty output
	file. Apparently libjbig parameters have changed. Setting l0
	parameter of jbg_enc_options to zero instead of -1 (like in
	jbigkit's pbmtools) solved the problem.

2005-02-26  Albert Chin-A-Young  <china@thewrittenword.com>

	* acinclude.m4 (AC_CXX_IOS_BINARY): Added macro to detect if the
	C++ compiler lacks support for ios::binary.
	* configure.ac: Use  AC_CXX_IOS_BINARY.

2005-02-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/jpeg.c (WriteJPEGImage): Don't use jpeglib private
	BITS_IN_JSAMPLE definition to select JPEG bit depth.

2005-01-31  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (TraceBezier): Avoid probable bug under Visual
	C++ 7.0 or later due to the argument to pow not being promoted to
	double.

2005-01-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/color.c (IsPaletteImage): Fix memory leak reported by
	Stefan v. Wachter <svwa-dev@mnet-online.de>.

2005-01-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh: Released 1.1.5.