@@ -21,6 +21,15 @@
 </tr>
 </table>
 <p>
+2005-04-02  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/utility.c (AllocateString): Performance enhancement.
+        (CloneString): Performance enhancement.
+        (ConcatenateString): Performance enhancement.
+
+</UL>
+<p>
 2005-03-19  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
