@@ -1,3 +1,9 @@
+2005-04-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/utility.c (AllocateString): Performance enhancement.
+	(CloneString): Performance enhancement.
+	(ConcatenateString): Performance enhancement.
+
 2005-03-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/pdf.c (WritePDFImage): Eliminate cause of annoying
